Add styles for homepage component.

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,2 @@
-<h1>Pokemon Masters Club</h1>
+<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+<h1>Gotta catch 'em all!</h1>
