--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:700" rel="stylesheet">
-<h1>{{title}}</h1>
+<div class="container">
+  <h1>{{title}}</h1>
+  <router-outlet></router-outlet>
+</div>
