--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,10 @@
   <h1>{{title}}</h1>
   <router-outlet></router-outlet>
 </div>
+<br>
+<br>
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
