--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,3 +1,6 @@
-<p>
-  member-detail works!
-</p>
+<div (click)="goToClubroster()">
+  <h2>{{memberToDisplay.name}}</h2>
+  <h4>{{memberToDisplay.gender}}</h4>
+  <h4>{{memberToDisplay.affiliation}}</h4>
+  <h4>{{memberToDisplay.level}}</h4>
+</div>
