--- a/src/app/clubroster/clubroster.component.html
+++ b/src/app/clubroster/clubroster.component.html
@@ -3,5 +3,9 @@
 <div *ngFor="let member of members | async" class="ppl panel panel-default">
   <div class="panel-body">
     <h3 (click)="goToDetailPage(member)"><em>{{member.name}}</em> from {{member.affiliation}}</h3>
+    <div *ngIf="currentRoute === '/admin'">
+      <hr>
+      <app-edit-member [selectedMember]="member"></app-edit-member>
+    </div>
   </div>
 </div>
