Create About component and include API key in repo for instructor feedback.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="roster">Club Roster</a></li>
+      <li><a routerLink="about">About</a></li>
     </ul>
   </div>
 </nav>
